# openapi.yaml
@@ -7,6 +7,47 @@ info:
     description: The greeting service definition.
     version: 0.0.1
 paths:
+    /api/articles/feed:
+        get:
+            tags:
+                - ConduitInterface
+            operationId: ConduitInterface_FeedArticles
+            parameters:
+                - name: limit
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: offset
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/MultipleArticles'
+    /api/articles/{slug}:
+        get:
+            tags:
+                - ConduitInterface
+            operationId: ConduitInterface_GetArticle
+            parameters:
+                - name: slug
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetArticleReply'
     api/articles:
         get:
             tags:
@@ -59,47 +100,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/GetArticleReply'
-    api/articles/feed:
-        get:
-            tags:
-                - ConduitInterface
-            operationId: ConduitInterface_FeedArticles
-            parameters:
-                - name: limit
-                  in: query
-                  schema:
-                    type: integer
-                    format: int64
-                - name: offset
-                  in: query
-                  schema:
-                    type: integer
-                    format: int64
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/MultipleArticles'
     api/articles/{slug}:
-        get:
-            tags:
-                - ConduitInterface
-            operationId: ConduitInterface_GetArticle
-            parameters:
-                - name: slug
-                  in: path
-                  required: true
-                  schema:
-                    type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/GetArticleReply'
         put:
             tags:
                 - ConduitInterface
@@ -210,12 +211,6 @@ paths:
                   required: true
                   schema:
                     type: string
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/FavoriteArticleRequest'
-                required: true
             responses:
                 "200":
                     description: OK
@@ -395,7 +390,7 @@ components:
             properties:
                 id:
                     type: integer
-                    format: int64
+                    format: int32
                 createdAt:
                     type: string
                 updatedAt:
@@ -422,11 +417,6 @@ components:
                     type: array
                     items:
                         type: string
-        FavoriteArticleRequest:
-            type: object
-            properties:
-                slug:
-                    type: string
         FollowUserRequest:
             type: object
             properties:
@@ -464,6 +454,9 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/SingleArticle'
+                articlesCount:
+                    type: integer
+                    format: int32
         MultipleCommentsReply:
             type: object
             properties:
